[package]
name    = "stig-viewer-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stig-viewer-backend"
path = "src/main.rs"

[dependencies]
axum               = { version = "0.7", features = ["macros", "multipart"] }
tokio              = { version = "1", features = ["full"] }
tower-http         = { version = "0.6", features = ["cors"] }
reqwest            = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
quick-xml          = "0.37"
zip                = "2"
sqlx               = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }
chrono             = { version = "0.4", features = ["serde"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = "1"
